[package]
name = "meta-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
web3 = { git = "https://github.com/wesleymoliveira/rust-web3", branch="eip-1193-multi-thread", version = "0.19.0", features = [
  "wasm",
  "eip-1193",
], default-features = false }
bevy = { version = "0.7", default-features = false, features = ["png"] }
bevy_egui = "0.13"
async-channel = "1.6.1"
tokio = { version = "1.12.0", features = ["rt"] }
wasm-bindgen-futures = "0.4.30"
serde = { version = "1.0.125", features = ["derive"] }
crossbeam-channel = "0.5"
